greeter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc
  labels:
    app: greeter
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: greeter
---
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc-v1
  labels:
    app: greeter
    version: v1
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: greeter
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc-v2
  labels:
    app: greeter
    version: v2
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: greeter
    version: v2
